<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:focusable="false"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_column="1"
        android:textStyle="bold"
        android:text="@string/records_header_title"/>

    <TextView
        android:id="@+id/speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_column="2"
        android:textStyle="bold"
        android:text="@string/records_header_speed" />

    <TextView
        android:id="@+id/hitRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_column="3"
        android:textStyle="bold"
        android:text="@string/records_header_hit_rate" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_column="4"
        android:textStyle="bold"
        android:text="@string/records_header_date" />

    <TextView
        android:id="@+id/gameMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_column="5"
        android:textStyle="bold"
        android:text="@string/records_header_game_mode" />

    <TextView
        android:id="@+id/gameLength"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_column="6"
        android:textStyle="bold"
        android:text="@string/records_header_game_length" />
</TableRow>
